# PvRecNet

./: 4.2.0  README.md  app.py  requirements.txt
backend/: main.py
backend/PvDeepSetNet/: pyproject.toml
backend/PvDeepSetNet/datasets/: GUI_sample_dataset.csv  pvAmpSeq_results_multi_prior.csv  pvAmpSeq_simulation_ready.csv
backend/PvDeepSetNet/src/DeepSets/: Build_tensors.py  DeepSets_pipeline.py  Model.py  Model_result.py  Post_model_computation.py  Preprocess.py  PvRecNet_plots.py  __init__.py  allele_dict.json  pv_deepsets_weights20260402.pth  pv_deepsets_weights20260425_154256.pth
backend/PvDeepSetNet/src/PvDeepSetNet.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backend/PvDeepSetNet/tests/: allele_dict.json  temp.ipynb
frontend/: app.py
services/: api.py
